# JC4880P443C_I_W_Remote

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.full  sdkconfig.defaults.media  sdkconfig.defaults.minimal
components/apps/: CMakeLists.txt  Kconfig.projbuild  README.md  apps.h  battery_history_service.cpp  battery_history_service.h  hardware_history_service.cpp  hardware_history_service.h  joypad_runtime.cpp  joypad_runtime.h  joypad_transport.cpp  joypad_transport.h  lvgl_input_helper.c  lvgl_input_helper.h  neopixel_runtime.cpp  neopixel_runtime.h  network_cache.hpp  storage_access.h  system_ui_service.cpp  system_ui_service.h
components/apps/camera/: Camera.cpp  app_video.c
components/apps/e_reader/: EReader.cpp  EReader.hpp
components/apps/e_reader/assets/: img_app_ereader.c
components/apps/file_manager/: FileManager.cpp  FileManager.hpp
components/apps/file_manager/assets/: img_app_file_manager.c
components/apps/game_2048/: Game_2048.cpp  Game_2048.hpp
components/apps/image_display/: ImageDisplay.cpp  ImageDisplay.hpp
components/apps/internet_radio/: InternetRadio.cpp  InternetRadio.hpp
components/apps/internet_radio/assets/img_app_radio_browser.c/: radio.c
components/apps/mqtt_app/: MqttApp.cpp  MqttApp.hpp
components/apps/mqtt_app/assets/: img_app_mqtt.c
components/apps/music_player/: MusicPlayer.cpp  MusicPlayer.hpp  music_library.cpp  music_library.h
components/apps/music_player/assets/: img_app_music_player.c
components/apps/music_player/gui_music/: lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_list.h  lv_demo_music_main.c  lv_demo_music_main.h  music_player_list_ui.c  music_player_list_ui.h  music_player_main_ui.c  music_player_main_ui.h  music_player_ui.c  music_player_ui.h
components/apps/music_player/gui_music/assets/: img_music_player_btn_corner_large.c  img_music_player_btn_list_pause.c  img_music_player_btn_list_pause_large.c  img_music_player_btn_list_play.c  img_music_player_btn_list_play_large.c  img_music_player_btn_loop.c  img_music_player_btn_loop_large.c  img_music_player_btn_next.c  img_music_player_btn_next_large.c  img_music_player_btn_pause.c  img_music_player_btn_pause_large.c  img_music_player_btn_play.c  img_music_player_btn_play_large.c  img_music_player_btn_prev.c  img_music_player_btn_prev_large.c  img_music_player_btn_rnd.c  img_music_player_btn_rnd_large.c  img_music_player_corner_left.c  img_music_player_corner_left_large.c  img_music_player_corner_right.c  img_music_player_corner_right_large.c  img_music_player_cover_1.c  img_music_player_cover_2.c  img_music_player_cover_3.c  img_music_player_icon_1.c  img_music_player_icon_1_large.c  img_music_player_icon_2.c  img_music_player_icon_2_large.c  img_music_player_icon_3.c  img_music_player_icon_3_large.c  img_music_player_icon_4.c  img_music_player_icon_4_large.c  img_music_player_list_border.c  img_music_player_list_border_large.c  img_music_player_logo.c  img_music_player_slider_knob.c  img_music_player_slider_knob_large.c  img_music_player_wave_bottom.c  img_music_player_wave_bottom_large.c  img_music_player_wave_top.c  (+4 more)
components/apps/p4_browser/: P4Browser.cpp  P4Browser.hpp
components/apps/p4_browser/assets/: img_app_browser.c
components/apps/p4_youtube/: P4YouTube.cpp  P4YouTube.hpp
components/apps/p4_youtube/assets/: img_app_youtube.c
components/apps/recorder/: Recorder.cpp  Recorder.hpp  RecorderCurtain.cpp  RecorderInternal.hpp  RecorderPlayback.cpp  RecorderRecording.cpp  RecorderRuntime.cpp  RecorderState.cpp  RecorderUi.cpp
components/apps/rs485/: RS485.cpp  RS485.hpp  RS485Internal.hpp  RS485State.cpp  RS485Ui.cpp  app_state.c  app_state.h  device_scan.c  device_scan.h  log_store.c  log_store.h  modbus_rtu.c  modbus_rtu.h  profile_store.c  profile_store.h  rs485_transport.c  rs485_transport.h
components/apps/sega_emulator/: SegaEmulator.cpp  SegaEmulator.hpp  SegaGwenesisBridge.c  SegaGwenesisBridge.h  psram_alloc.h
components/apps/sega_emulator/assets/: img_app_sega.c
components/apps/sega_emulator/gwenesis/src/bus/: gwenesis_bus.c  gwenesis_bus.h
components/apps/sega_emulator/gwenesis/src/cpus/M68K/: m68kcpu.c
components/apps/sega_emulator/gwenesis/src/sound/: ym2612.c
components/apps/sega_emulator/gwenesis/src/vdp/: gwenesis_vdp_gfx.c  gwenesis_vdp_mem.c
components/apps/sega_emulator/smsplus/: loadrom.c  render.c  shared.h  sms.c  tms.c  tms.h  vdp.c
components/apps/sega_emulator/smsplus/cpu/: z80.c
components/apps/sega_emulator/smsplus/sound/: sound.c  ym2413.c
components/apps/setting/: Setting.cpp  Setting.hpp  app_sntp.c  app_sntp.h
components/apps/setting/joypad/: SettingJoypad.cpp  SettingJoypadLayout.hpp
components/apps/setting/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
components/apps/setting/ui/images/: ui_img_bluetooth_status_png.c  ui_img_controller_png.c  ui_img_local_controller_png.c  ui_img_ota_status_png.c  ui_img_zigbee_status_png.c
components/apps/setting/ui/screens/: ui_ScreenSettingAbout.c  ui_ScreenSettingMain.c
components/apps/setting/wifi/: SettingWifiPrivate.hpp  SettingWifiRuntime.cpp  SettingWifiUi.cpp
components/apps/video_player/: VideoPlayer.cpp
components/apps/web_server/: WebServerApp.cpp  WebServerApp.hpp  WebServerService.cpp  WebServerService.hpp
components/apps/web_server/assets/: img_app_web_server.c
components/espressif__esp-brookesia/: CMakeLists.txt
components/espressif__esp-brookesia/src/core/: esp_brookesia_core_manager.cpp  esp_brookesia_core_manager.hpp
components/espressif__esp-brookesia/src/systems/phone/: esp_brookesia_phone.hpp  esp_brookesia_phone_app.cpp  esp_brookesia_phone_app.hpp  esp_brookesia_phone_home.cpp  esp_brookesia_phone_home.hpp  esp_brookesia_phone_manager.cpp  esp_brookesia_phone_manager.hpp
components/espressif__esp-brookesia/src/widgets/app_launcher/: esp_brookesia_app_launcher_icon.cpp
components/espressif__esp-brookesia/src/widgets/status_bar/: esp_brookesia_status_bar.cpp  esp_brookesia_status_bar.hpp
main/: CMakeLists.txt  (+3 more)
(+223 files in other folders)
